random card gen inital comit

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,16 @@
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+          <div class="card mt-5">
+            <div><span class="top-suit float-start ms-3"></span></div>
+            <div class="value"></div>
+            <div><span class="bottom-suit float-end me-3"></span></div>
+          </div>
+        </div>
+        <div class="col-4"></div>
       </div>
     </div>
 
